deploy/k8s/overlays/prod/cloud-sql-instance.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ignition-api
  namespace: ignition-system
spec:
  template:
    spec:
      containers:
        - name: cloud-sql-proxy
          args:
            - "--structured-logs"
            - "--private-ip"
            - "--port=5432"
            - "ignition-prod:us-central1:ignition-sql"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ignition-controller
  namespace: ignition-system
spec:
  template:
    spec:
      containers:
        - name: cloud-sql-proxy
          args:
            - "--structured-logs"
            - "--private-ip"
            - "--port=5432"
            - "ignition-prod:us-central1:ignition-sql"
